--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>GameHub</title>
+    <link rel="icon" href="./public/image/favicon.png" type="image/x-icon" />
   </head>
   <body>
     <div id="root"></div>
